--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,7 +9,40 @@
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
     <ol>
         <li>
-            <a href="/lab2/example">example</a> - Пример шаблона
+            <a href="/lab2/example">Пример шаблона с данными</a>
+        </li>
+        <li>
+            <a href="/lab2/filters">Демонстрация фильтров Jinja2</a> 
+        </li>
+        <li>
+            <a href="/lab2/flowers">Просмотр всего списка цветов</a> 
+        </li>
+        <li>
+            <a href="/lab2/flowers/0">Детальная информация о цветке</a> 
+        </li>
+        <li>
+            <a href="/lab2/add_flower/Орхидея">Добавление нового цветка</a>
+        </li>
+        <li>
+            <a href="/lab2/add_flower/">Тест ошибки 400</a>
+        </li>
+        <li>
+            <a href="/lab2/flowers/rewrite">Очистить список цветов</a>
+        </li>
+        <li>
+            <a href="/lab2/calc/7/5">Математические операции с числами</a>
+        </li>
+        <li>
+            <a href="/lab2/calc/10">Калькулятор</a> - Второе число по умолчанию = 1
+        </li>
+        <li>
+            <a href="/lab2/calc/">Калькулятор без значений</a> - Оба числа по умолчанию = 1
+        </li>
+        <li>
+            <a href="/lab2/books">Каталог книг с авторами и жанрами</a>
+        </li>
+        <li>
+            <a href="/lab2/dogs">Фотографии ягод</a> 
         </li>
     </ol>
 {% endblock %}
