--- a/templates/rewrite_fl.html
+++ b/templates/rewrite_fl.html
@@ -3,11 +3,12 @@
 {% block lab %}Лабораторная работа 2{% endblock %}
 
 {% block main %}
-    <h1>Список цветов очищен</h1>
-    <p>Список цветов был сброшен до начального состояния.</p>
+    <h1>Список цветов очищен <i>(до начального состояния)</i></h1>
     
     <div class="actions">
-        <a href="/lab2/flowers">Посмотреть все цветы</a> |
-        <a href="/lab2/">Назад к лабораторной 2</a>
+        <a href="/lab2/flowers">Посмотреть все цветы</a> 
+        <br>
+        <br>
+        <a href="/lab2/">Меню</a>
     </div>
 {% endblock %}
