--- a/templates/filter.html
+++ b/templates/filter.html
@@ -13,4 +13,6 @@
     <div>Фраза: {{ phrase  | striptags | replace('сколько', 'много')
         | replace('нам', 'тут') | upper }}</div>
     <div>Фраза: {{ phrase  | striptags | reverse }}</div>
+    <br>
+    <a href="/lab2/">Меню</a>
 {% endblock %}
