--- a/templates/error_fl.html
+++ b/templates/error_fl.html
@@ -7,8 +7,11 @@
     <p>Вы не задали имя цветка</p>
     
     <div class="actions">
-        <a href="/lab2/add_flower/Василёк">Добавить цветок с именем</a> |
-        <a href="/lab2/flowers">Посмотреть все цветы</a> |
-        <a href="/lab2/">Назад к меню</a>
+        <a href="/lab2/add_flower/василёк">Добавить цветок с именем</a>
+        <br>
+        <a href="/lab2/flowers">Посмотреть все цветы</a> 
+        <br>
+        <br>
+        <a href="/lab2/">Меню</a>
     </div>
 {% endblock %}
