--- a/templates/flowers.html
+++ b/templates/flowers.html
@@ -20,11 +20,11 @@
     {% endif %}
 
     <div class="actions">
-        <a href="/lab2/flowers/rewrite">Очистить список цветов</a>
-        <br>
-        <a href="/lab2/add_flower/Новый_цветок">Добавить цветок</a> 
-        <br>
-        <br>
-        <a href="/lab2/">Меню</a>
-    </div>
+    <a href="/lab2/flowers/rewrite">Очистить список цветов</a>
+    <br>
+    <a href="/lab2/add_flower/">Добавить цветок</a>
+    <br>
+    <br>
+    <a href="/lab2/">Меню</a>
+</div>
 {% endblock %}
