--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -7,7 +7,7 @@
 {% block main %}
     <h1>Шаблоны</h1>
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
-    <ol>
+    <ul>
         <li>
             <a href="/lab2/example">Пример шаблона с данными</a>
         </li>
@@ -18,7 +18,7 @@
             <a href="/lab2/flowers">Просмотр всего списка цветов</a> 
         </li>
         <li>
-            <a href="/lab2/flowers/2">Детальная информация о цветке</a> 
+            <a href="/lab2/flowers/1">Детальная информация о цветке</a> 
         </li>
         <li>
             <a href="/lab2/add_flower/Орхидея">Добавление нового цветка</a>
@@ -33,16 +33,16 @@
             <a href="/lab2/calc/7/5">Математические операции с числами</a>
         </li>
         <li>
-            <a href="/lab2/calc/10">Калькулятор</a> - Второе число по умолчанию = 1
+            <a href="/lab2/calc/10">Калькулятор (второе число по умолчанию 1)</a>
         </li>
         <li>
-            <a href="/lab2/calc/">Калькулятор без значений</a> - Оба числа по умолчанию = 1
+            <a href="/lab2/calc/">Калькулятор (два числа равны единице) </a>
         </li>
         <li>
             <a href="/lab2/books">Каталог книг с авторами и жанрами</a>
         </li>
         <li>
-            <a href="/lab2/dogs">Фотографии ягод</a> 
+            <a href="/lab2/berries/">Ягоды</a> 
         </li>
-    </ol>
+    </ul>
 {% endblock %}
