--- a/templates/specific_fl.html
+++ b/templates/specific_fl.html
@@ -13,7 +13,7 @@
 
     <div class="navigation">
         <a href="/lab2/flowers">Посмотреть все цветы</a> |
-        <a href="/lab2/add_flower/Новый_цветок">Добавить цветок</a> |
-        <a href="/lab2/">Назад к лабораторной 2</a>
+        <a href="/lab2/add_flower/">Добавить цветок</a> |
+        <a href="/lab2/">Меню</a>
     </div>
 {% endblock %}
