--- a/templates/books.html
+++ b/templates/books.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h1>Список книг</h1>
 
-    <div class="list_of_books">
+    <div>
         <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%;">
             <thead>
                 <tr style="background-color: #dfc5af;">
