--- a/templates/calc.html
+++ b/templates/calc.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h1>Расчёт с параметрами</h1>
     
-    <div class="calc-results">
+    <div>
         <ul>
            <li>{{ a }} + {{ b }} = <strong>{{ operations.sum }}</strong></li>
         <br>
