--- a/templates/error_fl.html
+++ b/templates/error_fl.html
@@ -6,7 +6,7 @@
     <h1>Ошибка 400 - Неверный запрос</h1>
     <p>Вы не задали имя цветка</p>
     
-    <div class="actions">
+    <div>
         <a href="/lab2/add_flower/василёк">Добавить цветок с именем</a>
         <br>
         <a href="/lab2/flowers">Посмотреть все цветы</a> 
