--- a/templates/rewrite_fl.html
+++ b/templates/rewrite_fl.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h1>Список цветов очищен <i>(до начального состояния)</i></h1>
     
-    <div class="actions">
+    <div>
         <a href="/lab2/flowers">Посмотреть все цветы</a> 
         <br>
         <br>
