--- a/templates/add_fl.html
+++ b/templates/add_fl.html
@@ -9,7 +9,7 @@
     <p><strong>Всего цветов:</strong> {{ count }}</p>
     <p><strong>Полный список:</strong> {{ flower_list | join(', ') }}</p>
    
-    <div class="actions">
+    <div>
         <a href="/lab2/flowers">Посмотреть все цветы</a> 
         <br>
         <a href="/lab2/add_flower/Новый цветок">Добавить еще цветок</a> 
