--- a/templates/add_fl.html
+++ b/templates/add_fl.html
@@ -7,7 +7,7 @@
     
     <p><strong>Название нового цветка:</strong> {{ name }}</p>
     <p><strong>Всего цветов:</strong> {{ count }}</p>
-    <p><strong>Полный список:</strong> {{ flower_list | join(', ') }}</p>
+    <p><strong>Полный список:</strong> {{ flower_list }}</p>
    
     <div>
         <a href="/lab2/flowers">Посмотреть все цветы</a> 
