--- a/templates/books.html
+++ b/templates/books.html
@@ -6,7 +6,7 @@
     <h1>Список книг</h1>
 
     <div>
-        <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%;">
+        <table border="1" cellpadding="6" style="border-collapse: collapse; width: 100%;">
             <thead>
                 <tr style="background-color: #dfc5af;">
                     <th>№</th>
