--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,6 +9,12 @@
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
     <ul>
         <li>
+            <a href="/lab2/a">Без слеша</a> 
+        </li>
+        <li>
+            <a href="/lab2/a/">Со слешом</a> 
+        </li>
+        <li>
             <a href="/lab2/example">Пример шаблона с данными</a>
         </li>
         <li>
