--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="{{ url_for('static', filename='icon/favicon.ico') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('static', filename='icon/favicon-16x16.png') }}" type="image/png" sizes="16x16">
     <link rel="icon" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}" type="image/png" sizes="32x32">
+    {% block styles %}{% endblock %}
 </head>
 <body>
     <header>
