--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,25 @@
     <link rel="icon" href="{{ url_for('static', filename='icon/favicon-16x16.png') }}" type="image/png" sizes="16x16">
     <link rel="icon" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}" type="image/png" sizes="32x32">
     {% block styles %}{% endblock %}
+    <style>
+    body {
+        {% if request.cookies.get('color') %}
+        color: {{ request.cookies.get('color') }};
+        {% endif %}
+        
+        {% if request.cookies.get('bg_color') %}
+        background-color: {{ request.cookies.get('bg_color') }};
+        {% endif %}
+        
+        {% if request.cookies.get('font_size') %}
+        font-size: {{ request.cookies.get('font_size') }}px;
+        {% endif %}
+        
+        {% if request.cookies.get('line_height') %}
+        line-height: {{ request.cookies.get('line_height') }};
+        {% endif %}
+    }
+</style>
 </head>
 <body>
     <header>
