--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -15,7 +15,7 @@
         {% endif %} 
     </div>
     <div>Ваш возраст: {{ age }}</div>
-    
+
     <div>Список сделанных страниц:</div>
     <ol>
         <li><a href="/lab3/cookie">Куки</a></li>
@@ -23,6 +23,7 @@
         <li><a href="/lab3/form1">Форма</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
         <li><a href="/lab3/settings">Цвет текста</a></li>
+        <li><a href="/lab3/ticket">Железнодорожный Билет</a></li>
     </ol>
     
 {% endblock %}
