очистка всех кук

--- a/templates/lab3/settings.html
+++ b/templates/lab3/settings.html
@@ -37,10 +37,12 @@
         <br>
         <div>
             <button type="submit">Применить</button>
+            <br>
+            <br>
+            <a href="/lab3/settings/reset" class="button">Сбросить настройки</a>
+            <br>
+            <a href="/lab3/">Меню</a>
         </div>
     </form>
 
-    <br>
-    <br>
-    <a href="/lab3/">Меню</a>
 {% endblock %}
