--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -24,6 +24,7 @@
         <li><a href="/lab3/order">Заказ напитка</a></li>
         <li><a href="/lab3/settings">Цвет текста</a></li>
         <li><a href="/lab3/ticket">Железнодорожный Билет</a></li>
+        <li><a href="/lab3/books">Дополнительное задание</a></li>
     </ol>
     
 {% endblock %}
