--- a/templates/lab3/dop_book.html
+++ b/templates/lab3/dop_book.html
@@ -29,7 +29,7 @@
         
         <div class="actions">
             <button type="submit" name="search" class="btn btn-primary">Искать</button>
-            <button type="submit" name="reset" class="btn btn-secondary">Сброс</button>
+            <button type="submit" name="reset" class="btn btn-secondary">Сбросить</button>
         </div>
     </form>
 
