--- a/templates/lab3/ticket.html
+++ b/templates/lab3/ticket.html
@@ -78,12 +78,10 @@
         </div>
 
         <br>
-
-        <div class="actions">
-            <button type="submit">Рассчитать стоимость</button>
-            <br>
-            <br>
-            <a href="/lab3/" class="button-link">Меню</a>
-        </div>
+        
+        <button type="submit">Рассчитать стоимость</button>
+        <br>
+        <br>
+        <a href="/lab3/">Меню</a>
     </form>
 {% endblock %}
