--- a/templates/lab3/pay.html
+++ b/templates/lab3/pay.html
@@ -19,17 +19,17 @@
         
         <div class="section">
             <label>Номер банковской карты:</label>
-            <input type="text" name="card" pattern="\d{16}" placeholder="0000 0000 0000 0000" required>
+            <input type="text" name="card" pattern="\d{16}" required>
         </div>
 
         <div class="section">
             <label>Имя держателя карты:</label>
-            <input type="text" name="name" placeholder="IVAN IVANOV" required>
+            <input type="text" name="name" required>
         </div>
 
         <div class="section">
             <label>Номер CVV:</label>
-            <input type="text" name="cvv" size="3" pattern="\d{3}" placeholder="123" required>
+            <input type="text" name="cvv" size="3" pattern="\d{3}" required>
         </div>
 
         <div class="actions">
