--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -22,7 +22,7 @@
         <li><a href="/lab3/del_cookie">Очистить cookie</a></li>
         <li><a href="/lab3/form1">Форма</a></li>
         <li><a href="/lab3/order">Заказ напитка</a></li>
-        <li><a href="/lab3/settings">Цвет текста</a></li>
+        <li><a href="/lab3/settings">Оформление страниц</a></li>
         <li><a href="/lab3/ticket">Железнодорожный билет</a></li>
         <li><a href="/lab3/books">Дополнительное задание</a></li>
     </ol>
