Окончание работы на паре

--- a/templates/lab3/success.html
+++ b/templates/lab3/success.html
@@ -19,5 +19,5 @@
         <a href="/lab3/order" class="button">Сделать новый заказ</a>
     </div>
 
-    <a href="/lab3/"Меню</a>
+    <a href="/lab3/">Меню</a>
 {% endblock %}
