--- a/templates/lab3/ticket.html
+++ b/templates/lab3/ticket.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='lab3/lab3_ticket.css')}}">
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}">
 {% endblock %}
 
 {% block lab %}Лабораторная работа 3{% endblock %}
