--- a/templates/lab4/div.html
+++ b/templates/lab4/div.html
@@ -8,16 +8,15 @@
 <div>
     <h1>Деление чисел</h1>
     
-    <form method="post" action="/lab4/div">
+    {% if error %}
+        <div>{{ error }}</div>
+    {% else %}
         <div>
-            <input type="number" name="x1">
-            <span>/</span>
-            <input type="number" name="x2">
-            <input type="submit" value="=">
+            {{ x1 }} / {{ x2 }} = {{ result }}
         </div>
-    </form>
+    {% endif %}
+    
+    <br>
+    <a href="{{ url_for('lab4.div_form') }}">Вернуться к форме деления</a>
 </div>
-<br>
-<br>
-<a href="/lab4/">Меню</a>
 {% endblock %}
