--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -6,8 +6,12 @@
 {# основной контент: #}
 {% block main %}
     <h1>Формы (POST)</h1>
-    <div>Тема лабораторной - Формы (POST). Список сделанных страниц:</div>
+    <div>
+        Тема лабораторной работы - Формы (POST). Список сделанных страниц:
+    </div>
     <ol>
-        <li><a href="/lab4/div/form">Деление</a></li>
-    </ol> 
-{% endblock %}
+        <li>
+            <a href="/lab4/div-form">Деление</a>
+        </li>
+    </ol>
+{% endblock %} 
