--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -25,5 +25,17 @@
         <li>
             <a href="/lab4/pow-form">Возведение в степень</a>
         </li>
+        <li>
+            <a href="/lab4/tree">Счётчик деревьев</a>
+        </li>
+        <li>
+            <a href="/lab4/login">Авторизация</a>
+        </li>
+        <li>
+            <a href="/lab4/fridge">Холодильник</a>
+        </li>
+        <li>
+            <a href="/lab4/grain">Заказ</a>
+        </li>
     </ol>
 {% endblock %}
