--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -26,7 +26,7 @@
             <a href="/lab4/pow-form">Возведение в степень</a>
         </li>
         <li>
-            <a href="/lab4/tree">Счётчик деревьев</a>
+            <a href="/lab4/tree">Деревья</a>
         </li>
         <li>
             <a href="/lab4/fridge">Холодильник</a>
