--- a/templates/lab4/users.html
+++ b/templates/lab4/users.html
@@ -25,6 +25,7 @@
             <button type="submit" style="background-color: #dc3545;">Удалить мой аккаунт</button>
         </form>
     </div>
-    
-    <p><a href="/lab4/">Назад к лабораторной 4</a></p>
+    <br>
+    <br>
+    <a href="/lab4/">Меню</a>
 {% endblock %}
