--- a/templates/lab4/fridge.html
+++ b/templates/lab4/fridge.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='lab4/fridge.css')}}">
@@ -44,6 +43,6 @@
     <br>
     <br>
     
-    <a href="/lab4/" class="back-link">Меню</a>
+    <a href="/lab4/">Меню</a>
     
 {% endblock %}
