--- a/templates/lab4/grain.html
+++ b/templates/lab4/grain.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
+
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='lab4/grain.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lab4/grain.css')}}">
 {% endblock %}
 
 {% block lab %}Лабораторная работа 4{% endblock %}
 
 {% block main %}
-    <h1> Заказ зерна</h1>
+    <h1>Заказ зерна</h1>
     <h2>Выберите зерно и укажите вес</h2>
     
     <form method="post">
@@ -34,32 +35,27 @@
         
         <div>
             <label for="weight">Вес (тонны):</label>
-            <input type="number" id="weight" name="weight" 
-                   value="{{ weight or '' }}" 
-                   placeholder="Укажите вес"
-                   step="0.1">
+            <input type="number" id="weight" name="weight" value="{{ weight or '' }}" placeholder="Укажите вес" step="0.1">
         </div>
         
         {% if error %}
-        <div class="error-messag"> {{ error }}</div>
+            <div class="error-messag">{{ error }}</div>
         {% endif %}
         
         {% if success %}
-        <div class="success-message"> {{ success }}</div>
+            <div class="success-message">{{ success }}</div>
         {% endif %}
         
         <br>
 
-        <div class="button-group">
-            <button type="submit">Оформить заказ</button>
-            <br>
-            <br>
-            <a href="/lab4/grain" class="reset-button">Сброс</a>
-        </div>
+        <button type="submit">Оформить заказ</button>
+        <br>
+        <br>
+        <a href="/lab4/grain" class="reset-button">Сброс</a>
     </form>
     
-   <br>
-   <br>
+    <br>
+    <br>
+    
     <a href="/lab4/">Меню</a>
-   
 {% endblock %}
