--- a/templates/lab5/success.html
+++ b/templates/lab5/success.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='lab5/success.css')}}">
+{% endblock %}
 
-{# номер лабораторной работы: #}
 {% block lab %}Лабораторная работа 5{% endblock %}
 
-{# основной контент: #}
 {% block main %}
 <div class="lab5-main">
     <br>
