--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -29,6 +29,14 @@
             </label>
         </div>
         
+         <div class="form-group">
+            <label>
+                Ваше имя:
+                <input type="text" name="real_name" maxlength="100">
+            </label>
+        </div>
+        
+    
         <br>
 
         <button type="submit" class="lab5-btn">Зарегистрироваться</button>
