--- a/templates/lab5/register.html
+++ b/templates/lab5/register.html
@@ -25,7 +25,7 @@
         <div class="form-group">
             <label>
                 Пароль:
-                <input type="password" name="password" required>
+                <input type="password" name="password">
             </label>
         </div>
         
