--- a/templates/lab5/users.html
+++ b/templates/lab5/users.html
@@ -19,7 +19,7 @@
             {% for user in users %}
             <tr>
                 <td>{{ user['login'] }}</td>
-                <td>{{ user['real_name'] or 'Не указано' }}</td>
+                <td>{{ user['real_name'] or 'Имя не задано' }}</td>
             </tr>
             {% endfor %}
         </tbody>
